--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 <meta charset="utf-8">
 
-<title>LoL换肤魔盒官方网站_LOL换肤_LOLuu换肤_LOL换肤大师_LOL换肤盒子</title>
+<title>LoL换肤大师官方网站_LOL换肤_LOLuu换肤_LOL换肤大师_LOL换肤盒子</title>
 <meta name="Keywords" content="LOL换肤盒子,LOL换肤大师,LOL兔子换肤,LOL皮肤修改" />
-<meta name="Description" content="LoL换肤魔盒是专业为英雄联盟LOL打造的一款免费的LOL换肤插件，安全可靠，绿色无毒，已稳定运行4年。提供更加精美的画面和操作手感，同时提供LOL英雄联盟的游戏技巧、攻略、资讯、视频等资讯和软件分享。" />
+<meta name="Description" content="LoL换肤大师是专业为英雄联盟LOL打造的一款免费的LOL换肤插件，安全可靠，绿色无毒，已稳定运行4年。提供更加精美的画面和操作手感，同时提供LOL英雄联盟的游戏技巧、攻略、资讯、视频等资讯和软件分享。" />
 
 <meta name="baidu-site-verification" content="b9lOcChmbf">
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
